jupyter-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  labels:
    app: jupyter-notebook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      containers:
      - name: minimal-notebook
        image: jupyter/minimal-notebook:latest
        ports:
        - containerPort: 8888
---
kind: Service
apiVersion: v1
metadata:
  name: minimal-notebook
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30000
  selector:
    app: jupyter-notebook
